--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ plantuml==0.3.0
 six==1.16.0
 mysql-connector-python==8.2.0
 pyopenssl==23.3.0
-google
+google==3.0.0
 google-api-core==1.26.0
 google-api-python-client
 google-auth==1.24.0
